Work on dropdown and mobile menu functionality and styles

--- a/wordpress/_dev/themes/dcbase/assets/sass/compressed/style.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/compressed/style.scss
@@ -31,7 +31,7 @@
 // @import '../imports/cp';
 @import '../imports/header';
 // @import '../imports/footer';
-// @import '../imports/responsive';
+@import '../imports/responsive';
 
 
 /*
