--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_variables.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_variables.scss
@@ -19,6 +19,8 @@ $font-02: Georgia, $serif-fb;
 // ============================================== //
 
 $main-spacing: 20px;
+$dropdown-icon: 16px;
+$mobile-menu-icon: 20px;
 $mobile-menu-width: 300px;
 $form-field-height: 40px;
 $button-fields: "[type='button'], [type='reset'], [type='submit']";
