--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_colors.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_colors.scss
@@ -22,3 +22,4 @@ $light-00: rgba(255, 255, 255, 0);
 
 $dark-00: lighten($color-00, 25%);
 $dark-01: darken($color-00, 10%);
+$dark-03: rgba(0, 0, 0, 0.5);
