--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_header.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_header.scss
@@ -3,7 +3,6 @@
 
 .browser-upgrade {
 	@include position($type: fixed, $top: 0, $left: 0, $right: 0, $z: 9999);
-	width: 100%;
 	background: $color-03;
 	border-bottom: 2px solid darken($color-03, 25%);
 	padding: 20px;
@@ -37,13 +36,22 @@
 	.search-form {}
 }
 
+/* Menu Resets
+============================================== */
+
+.navigation-main, .navigation-mobile {
+	.menu, .sub-menu {
+		margin: 0;
+	}
+	.menu > .menu-item > .sub-menu .sub-menu {
+		@include sr-only;
+	}
+}
+
 /* Main Navigation
 ============================================== */
 
 .navigation-main {
-	.menu, .sub-menu {
-		margin: 0;
-	}
 	.menu {
 		@include flex-flow(row nowrap);
 		align-items: center;
@@ -52,529 +60,89 @@
 		& > .menu-item {
 			display: block;
 			padding: 0 10px;
-			a {
-				text-align: center;
-				// &:after {
-				// 	content: '';
-				// 	@include icon-font;
-				// }
+		}
+	}
+}
+
+/* Mobile Button & Navigation
+============================================== */
+
+.navigation-mobile-trigger, .navigation-mobile {
+	display: none;
+}
+
+.navigation-mobile-trigger {}
+
+.navigation-mobile {
+	background: $color-00;
+	@include position($type: fixed, $top: 0, $left: -($mobile-menu-width + 300), $z: 9999);
+	@include sizing($mobile-menu-width, 100%);
+	transition: left 0.3s ease-in-out;
+	&, a, .icon {
+		color: $color-01;
+	}
+	&, ul {
+		font-size: rem(16px);
+	}
+	.navigation-mobile-header .navigation-mobile-close, .dropdown .dropdown-label .dropdown-trigger {
+		@include sizing($mobile-menu-icon, $mobile-menu-icon);
+		.icon {
+			font-size: rem($mobile-menu-icon);
+			line-height: $mobile-menu-icon;
+		}
+	}
+	.navigation-mobile-header, .navigation-mobile-content .dropdown .dropdown-label {
+		position: relative;
+	}
+	.navigation-mobile-header {
+		padding: 0 20px;
+		line-height: 60px;
+		.navigation-mobile-title {
+			margin: 0 20px 0 0;
+		}
+		.navigation-mobile-close {
+			margin: 0 0 0 auto;
+			text-align: center;
+		}
+	}
+	.navigation-mobile-content {
+		padding: 20px;
+		.dropdown {
+			margin: 0 0 10px 0;
+			&:last-child {
+				margin: 0;
+			}
+			&.dropdown-visible {
+				.dropdown-label {
+					font-weight: bold;
+				}
+				.dropdown-content {
+					margin: 10px 0 0 0;
+					@include sizing(auto, auto);
+				}
+			}
+			&.dropdown-hidden {
+				display: none;
+			}
+			.dropdown-label {
+				.dropdown-trigger .icon:before {
+					content: unicode($icon-angle-right);
+				}
+			}
+			.dropdown-content {
+				transition: margin-left 0.5s ease-in-out;
+				margin: 0 0 0 (-$mobile-menu-width);
+				position: static;
+				padding: 0;
+				@include sizing(0, 0);
+				min-width: 0;
 			}
 		}
 	}
 }
 
-// /* Header - Nav Menu
-// ============================================== */
-//
-// .navbar {
-// 	a, .icon.fa-angle-down {
-// 		color: map-get($color-set-00, light-00);
-// 	}
-// 	a, .icon.fa-angle-down {
-// 		&:hover {
-// 			color: $color-03;
-// 		}
-// 	}
-// 	.menu {
-// 		.menu-label {
-// 			.fa-angle-down {
-// 				@include sizing(16px, 16px);
-// 				margin: 0 0 0 10px;
-// 				@include position($type: relative, $top: 1px);
-// 			}
-// 			.mobile-menu-trigger {
-// 				display: none;
-// 			}
-// 		}
-// 		.dropdown {
-// 			top: 35px;
-// 			min-width: 200px;
-// 			.dropdown-contents {
-// 				max-height: none;
-// 				overflow: visible;
-// 				padding: 0;
-// 				font-size: rem($global-font-size);
-// 			}
-// 		}
-// 		.dropdown-visible .menu-label .fa-angle-down:before {
-// 			content: unicode($icon-angle-up);
-// 		}
-// 	}
-// 	.user-menu {
-// 		margin: 1px -10px 0 auto;
-// 		.dropdown {
-// 			@include position($right: 0, $left: auto);
-// 		}
-// 		.logged-in-info .dropdown {
-// 			top: 40px;
-// 		}
-// 	}
-// 	&.sticky {
-// 		background: $color-02;
-// 		.site-logo-text {
-// 			margin: 0 20px 0 0;
-// 			@include toggle-content(show);
-// 			overflow: visible;
-// 			@include sizing(auto, auto);
-// 		}
-// 		.user-menu .logged-in-info .user-name {
-// 			max-width: 210px;
-// 		}
-// 	}
-// }
-//
-// /* Header - Nav Menu
-// ============================================== */
-//
-// .nav-menu .icon.fa-thumbs-o-up {
-// 	font-size: 0;
-// 	& + span {
-// 		margin: 0;
-// 	}
-// }
-//
-// /* Header - Nav Menu - Search Box
-// ============================================== */
-//
-// .navbar .menu .search-box {
-// 	min-width: 400px;
-// 	@include position($left: -150%);
-// }
-//
-// /* Header - User Menu
-// ============================================== */
-//
-// .user-menu {
-// 	.image-wrap {
-// 		@include sizing(30px, 30px);
-// 		border: 2px solid $color-01;
-// 	}
-// 	.user-name, .user-avatar {
-// 		@include inline-block(middle);
-// 	}
-// 	.user-avatar {
-// 		margin: 0 0 0 10px;
-// 		.image-wrap {
-// 			border-radius: 100%;
-// 		}
-// 	}
-// 	.logged-in-info .user-name {
-// 		max-width: 285px;
-// 		@include ellipsis;
-// 	}
-// 	.guest-info a {
-// 		color: $color-04;
-// 		&:hover {
-// 			color: $color-03;
-// 		}
-// 	}
-// 	.dropdown-container .dropdown-contents {
-// 		.linked-account-title {
-// 			margin: 7px 0 0 0;
-// 			padding: 10px 0 3px 0;
-// 			border-top: 1px dashed $color-01;
-// 		}
-// 		.linked-account {
-// 			position: relative;
-// 			&, &:last-child {
-// 				padding-left: 30px;
-// 			}
-// 			.image-wrap {
-// 				@include position($type: absolute, $top: 0, $left: 0);
-// 				@include sizing(20px, 20px);
-// 				border-width: 1px;
-// 			}
-// 		}
-// 	}
-// }
-//
-// /* Notifications
-//    Note: Header area only. UCP notifications in cp.scss
-// ============================================== */
-//
-// #notification_list {
-// 	min-width: 450px;
-// 	padding: 0;
-// 	.header, .footer, ul li {
-// 		padding: 10px 20px;
-// 	}
-// 	.header, .footer {
-// 		background: $color-01;
-// 		font-size: rem(15px);
-// 		&, a {
-// 			color: $light-01;
-// 		}
-// 		a:hover {
-// 			color: $color-03;
-// 		}
-// 	}
-// 	.header .header_settings, ul li {
-// 		font-size: rem(13px);
-// 	}
-// 	.header {
-// 		padding-right: 170px;
-// 		position: relative;
-// 		.header_settings {
-// 			@include position($type: absolute, $top: 14px, $right: 20px);
-// 		}
-// 	}
-// 	.footer {
-// 		text-align: center;
-// 	}
-// 	ul {
-// 		margin: 0;
-// 		max-height: 295px;
-// 		overflow-y: auto;
-// 		li {
-// 			position: relative;
-// 			border-bottom: 1px dashed $color-01;
-// 			&:last-child {
-// 				border-bottom: 0;
-// 			}
-// 			.notification-block {
-// 				@include clearfix('&');
-// 				display: block;
-// 				.image-wrap {
-// 					margin: 0 10px 0 0;
-// 					float: left;
-// 				}
-// 				.notification_text {
-// 					overflow: hidden;
-// 					padding: 0 25px 0 0;
-// 					p {
-// 						display: inline;
-// 					}
-// 					.notification-time {
-// 						&:before {
-// 							content: ' on ';
-// 						}
-// 						&:after {
-// 							content: '.';
-// 						}
-// 					}
-// 				}
-// 			}
-// 			.icon-mark {
-// 				@include position($type: absolute, $top: 10px, $right: 20px, $z: 2);
-// 				.icon {
-// 					width: auto;
-// 				}
-// 			}
-// 		}
-// 	}
-// }
-//
-// /* Page welcome
-// ============================================== */
-//
-// .page-welcome {
-// 	.site-details {
-// 		order: -1;
-// 		.introduction:first-line, .year {
-// 			@include spectral-common;
-// 			font-size: rem(20px);
-// 		}
-// 	}
-// 	.user-profile {
-// 		text-align: center;
-// 		.date-and-time {
-// 			display: none;
-// 		}
-// 		.user-avatar {
-// 			max-width: 150px;
-// 			margin: -75px auto 20px auto;
-// 		}
-// 		h5, p {
-// 			margin: 0 0 10px 0
-// 		}
-// 		p:last-child {
-// 			margin-bottom: 20px;
-// 		}
-// 		.welcome-header {
-// 			font-family: $font-03;
-// 			font-variant: normal;
-// 			font-size: rem(40px);
-// 		}
-// 		.guest-name {
-// 			color: $color-04;
-// 			&:hover {
-// 				color: $color-03;
-// 			}
-// 		}
-// 		.level {
-// 			font-size: rem(16px);
-// 			@include spectral-common;
-// 		}
-// 	}
-// 	.user-information {
-// 		&:before, &:after {
-// 			content: '';
-// 			display: block;
-// 			width: 100%;
-// 			border-top-style: dashed;
-// 			border-top-color: $color-01;
-// 			border-top-width: 0;
-// 		}
-// 	}
-// 	.site-links {
-// 		font-size: rem(13px);
-// 		ul {
-// 			margin: 0 0 20px 14px;
-// 		}
-// 	}
-// 	.toggle-buttons {
-// 		display: none;
-// 		.button {
-// 			width: 100%;
-// 		}
-// 	}
-// }
-//
-// /* Badge
-// ============================================== */
-//
-// .badge {
-// 	@include inline-block(top);
-// 	@include sizing(20px, 20px);
-// 	line-height: 20px;
-// 	background-color: $color-08;
-// 	border-radius: 100%;
-// 	text-align: center;
-// 	font-weight: normal;
-// 	font-size: rem(10px);
-// 	margin: 0 0 0 10px;
-// 	&.badge-plus {
-// 		font-size: rem(20px);
-// 	}
-// }
-//
-// .badge, a:hover .badge {
-// 	color: $light-05;
-// }
-//
-// /* Featured Content
-// ============================================== */
-//
-// .featured-content {
-// 	margin: 0 0 10px 0;
-// 	.featured-title {
-// 		text-align: center;
-// 		margin: 0 -5px 20px -5px;
-// 		.icon {
-// 			margin: 0 5px;
-// 			@include position($type: relative, $top: -2.5px);
-// 		}
-// 	}
-// 	.flex-row {
-// 		align-items: center;
-// 		margin-bottom: 20px;
-// 		.flex-column {
-// 			margin: 0 0 10px 0;
-// 			a {
-// 				display: block;
-// 				border: 10px solid map-get($dark-set, dark-03);
-// 				overflow: hidden;
-// 				color: $color-00;
-// 				&:hover {
-// 					color: $color-03;
-// 					img {
-// 						transform: scale(1.3,1.3);
-// 					}
-// 				}
-// 			}
-// 			p {
-// 				@include position($type: absolute, $bottom: 0, $left: 0, $right: 0);
-// 				padding: 0 10px;
-// 				margin: 0;
-// 				height: 30px;
-// 				line-height: 30px;
-// 				@include ellipsis;
-// 				background: map-get($dark-set, dark-07);
-// 				text-align: center;
-// 			}
-// 			.featured-details {
-// 				position: relative;
-// 			}
-// 			.image-wrap {
-// 				@include sizing(100%, 0);
-// 				padding: 0 0 55% 0;
-// 				img {
-// 					margin: -25% 0 0 0;
-// 					width: 100%;
-// 					@include transition(transform 0.5s ease-in-out);
-// 				}
-// 			}
-// 		}
-// 		.featured-profiles .image-wrap img {
-// 			margin-top: 0;
-// 		}
-// 	}
-// }
-//
-// /* Mobile Button & Menu
-// ============================================== */
-//
-// .mobile-menu-button, #mobile-menu {
-// 	display: none;
-// }
-//
-// .mobile-menu-button {
-// 	margin: 0 -10px;
-// 	&, &:hover {
-// 		color: $color-00;
-// 	}
-// 	.button-section, .rpg-icon, .mobile-menu-label {
-// 		vertical-align: middle;
-// 	}
-// 	.button-section, .mobile-menu-label {
-// 		display: inline-block;
-// 	}
-// 	.button-section {
-// 		padding: 0 10px;
-// 	}
-// 	.mobile-menu-text {
-// 		position: relative;
-// 		top: 2px;
-// 	}
-// 	.badge {
-// 		margin: 0;
-// 	}
-// 	.rpg-icon {
-// 		font-size: rem(25px);
-// 	}
-// }
-//
-// #mobile-menu {
-// 	background: $color-02;
-// 	border-right: 1px solid map-get($color-set-01, dark-00);
-// 	@include position($type: fixed, $top: 0, $left: -($mobile-menu-width + 300), $z: 9999);
-// 	@include sizing($mobile-menu-width, 100%);
-// 	@include transition(left 0.3s ease-in-out);
-// 	&.show {
-// 		left: 0;
-// 	}
-// 	&, a {
-// 		color: $light-07;
-// 	}
-// 	&, ul {
-// 		font-size: rem(16px);
-// 	}
-// 	ul, .user-menu .dropdown-container .dropdown-contents .linked-account-title {
-// 		margin: 0;
-// 	}
-// 	.mobile-menu-header, .menu .menu-label {
-// 		position: relative;
-// 	}
-// 	.mobile-menu-header, .menu .menu-label, .menu .dropdown-contents li, .menu .dropdown-contents > div {
-// 		padding: 10px;
-// 	}
-// 	.menu .menu-label, .menu .dropdown-contents li, .menu .dropdown-contents > div {
-// 		border-top: 1px solid $color-01;
-// 		border-bottom: 1px solid map-get($color-set-01, dark-00);
-// 	}
-// 	.mobile-menu-header .fa-close, .menu .menu-label .fa-angle-down {
-// 		@include sizing(44px, 44px);
-// 		line-height: 44px;
-// 		font-size: rem(20px);
-// 		@include position($type: absolute, $right: 0, $top: 0, $bottom: 0, $z: 10);
-// 		margin: auto;
-// 		text-align: center;
-// 		cursor: pointer;
-// 	}
-// 	.mobile-menu-header {
-// 		border-bottom: 1px solid map-get($color-set-01, dark-00);
-// 	}
-// 	.mobile-menu-content {
-// 		border-bottom: 1px solid $color-01;
-// 	}
-// 	.menu {
-// 		.menu-label .fa-angle-down {
-// 			@include transition($transform);
-// 			&:before {
-// 				content: unicode($icon-angle-right);
-// 			}
-// 		}
-// 		.dropdown {
-// 			display: block;
-// 			@include sizing(0, 0);
-// 			min-width: 0;
-// 			margin-left: -($mobile-menu-width) !important;
-// 			border: 0;
-// 			background: none;
-// 			@include transition(margin-left 0.5s ease-in-out);
-// 			position: static;
-// 			&, .dropdown-contents {
-// 				padding: 0;
-// 			}
-// 			.dropdown-contents {
-// 				max-height: none;
-// 				overflow: visible;
-// 			}
-// 		}
-// 		.search-box .dropdown-contents form {
-// 			margin: 10px 0;
-// 		}
-// 		.dropdown-visible {
-// 			.menu-label {
-// 				font-weight: bold;
-// 				.fa-angle-down {
-// 					transform: rotate(-180deg);
-// 				}
-// 			}
-// 			.dropdown {
-// 				@include sizing(auto, auto);
-// 				margin-left: 0 !important;
-// 				visibility: visible;
-// 				opacity: 1;
-// 			}
-// 		}
-// 		.dropdown-not-visible {
-// 			display: none;
-// 		}
-// 	}
-// 	.user-menu {
-// 		.logged-in-info .user-name {
-// 			max-width: 190px;
-// 		}
-// 		.guest-info {
-// 			a {
-// 				color: $color-04;
-// 			}
-// 			.user-name {
-// 				max-width: 234px;
-// 			}
-// 		}
-// 		.dropdown-contents .linked-account {
-// 			padding-left: 40px;
-// 			a .image-wrap {
-// 				top: 12px;
-// 				left: 10px;
-// 			}
-// 		}
-// 	}
-// 	#notification_list {
-// 		.header .header_settings, ul li {
-// 			font-size: rem(14px);
-// 		}
-// 		.header, .footer {
-// 			background: $color-02;
-// 		}
-// 		.header {
-// 			font-size: 0;
-// 			.header_settings {
-// 				position: static;
-// 				font-size: rem(14px);
-// 			}
-// 		}
-// 		.footer {
-// 			text-align: left;
-// 		}
-// 		ul {
-// 			max-height: none;
-// 			overflow: visible;
-// 			li .icon-mark {
-// 				right: 10px;
-// 			}
-// 		}
-// 	}
-// }
+.navigation-visible {
+	.navigation-mobile {
+		left: 0;
+	}
+}
