--- a/wordpress/_dev/themes/dcbase/assets/sass/imports/_mixins.scss
+++ b/wordpress/_dev/themes/dcbase/assets/sass/imports/_mixins.scss
@@ -1,6 +1,18 @@
 // Mixins
 // ============================================== //
 
+// Center elements
+@mixin centered($type: '', $z: '') {
+	@if $type != '' {
+		position: $type;
+	}
+	@include position($top: 0, $bottom: 0, $right: 0, $left: 0);
+	@if $z != '' {
+		z-index: $z;
+	}
+	margin: auto;
+}
+
 // Clearfix
 @mixin clearfix($selector) {
 	#{$selector}:before, #{$selector}:after {
@@ -75,7 +87,6 @@
 	font-style: normal;
 	font-weight: normal;
 	font-variant: normal;
-
 
 	// Font size logic
 	@if ($fs != false) {
@@ -186,7 +197,7 @@
 		opacity: 1;
 	}
 	@if ($transition == true) {
-		@include transition(opacity 0.5s ease);
+		transition: opacity 0.5s ease;
 	}
 }
 
